<resources>
    <string name="app_name">LessWallet</string>
    <string name="login_username_hint">Please input username...</string>
    <string name="login_password_hint">Please input password...</string>
    <string name="login_repassword_hint">Please retype Password...</string>
    <string name="login_remember">Remember me</string>
    <string name="login">Sign in</string>
    <string name="logout">Sign Out</string>
    <string name="register_txt1">If you have not register,</string>
    <string name="register_txt2">register now &gt;</string>
    <string name="reg_mobile_hint">Mobile Phone Number</string>
    <string name="reg_firstname_hint">First Name</string>
    <string name="reg_lastname_hint">Last Name</string>
    <string name="reg_password_hint">Password</string>
    <string name="reg_repassword_hint">Retype Password</string>
    <string name="reg_password_short">Password is too short (minimum is 7 characters)</string>
    <string name="reg_password_leter">Password must include at least one letter and one number</string>
    <string name="reg_email_hint">Email</string>
    <string name="reg_address_hint">Home Address</string>
    <string name="reg_country_hint">Please select your country</string>
    <string name="register">Register</string>
    <string name="account_title">My Profile</string>
    <string name="account_mobile">Phone Number</string>
    <string name="account_email">Email</string>
    <string name="account_country">Country</string>
    <string name="account_points">Points</string>
    <string name="account_scan">Scan this QR code to add me as friend</string>
    <string name="merchant_scan">Scan this QR code to add a favorite merchant</string>
    <string name="account_setting">Setting</string>
    <string name="collect_title">Collection by QR code</string>
    <string name="collect_scan">Scan this QR code to pay me by LessWallet</string>
    <string name="collect_set">Set Amount</string>
    <string name="collect_export">Export QRCode</string>
    <string name="collect_amount">Amount to collect</string>
    <string name="collect_currency_hint">Please select currency</string>
    <string name="collect_export_success">Exported the QRCode successfully</string>
    <string name="collect_export_failed">Failed to export the QRCode</string>
    <string name="error_invalid_email">Invalid Email.</string>
    <string name="error_invalid_password">Passowrd is invalid, it should be between 6 to 20 digits alphanumerical characters.</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_empty_amount">The collection amount is required</string>
    <string name="error_format_amount">The collection amount must be float number with two decimals.</string>
    <string name="error_field_required">This field is required</string>
    <string name="dialog_camera_permission">This App need the camera permission to scan QRCode</string>
    <string name="dialog_camera_permission_setting">This App need the camera permission, do you want to open the system setting page?</string>
    <string name="dialog_permission_title">Request Permission</string>
    <string name="button_ok">OK</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_give">GIVE</string>
    <string name="button_detail">More Details</string>
    <string name="scan_title">QRCode Scan</string>
    <string name="scan_text">Put the QRCode into the scan box.</string>
    <string name="scan_select_image">Select a QRCode image</string>
    <string name="scan_process">Scanning...</string>
    <string name="friend_list">Friend List</string>
    <string name="friends_username_hint">Mobile Phone/Email</string>
    <string name="friends_search_btn">Search</string>
    <string name="friends_search_error1">Please input mobile phone or Email</string>
    <string name="friend_title">Friend Information</string>
    <string name="friend_title_add">Search Result</string>
    <string name="friend_add">Add as friend</string>
    <string name="friend_add_success">Friend has been added successfully.</string>
    <string name="friend_select_hint">Please select your friend</string>
    <string name="coupon_sent_to">SENT TO:</string>
    <string name="coupon_sent_success">Send successfully.</string>
    <string name="coupon_publish_merchant">Publish Merchant:</string>
    <string name="coupon_publish_date">Publish Date:</string>
    <string name="coupon_publish_price">Publish Price:</string>
    <string name="coupon_benefit">Benefit:</string>
    <string name="coupon_benefit_free">Free</string>
    <string name="coupon_benefit_precash">Voucher</string>
    <string name="coupon_benefit_discount">Discount</string>
    <string name="coupon_benefit_customized"></string>
    <string name="coupon_level">Card Class:</string>
    <string name="coupon_validity">Validity Period:</string>
    <string name="coupon_expiry_date">Expiry Date:</string>
    <string name="coupon_validity_day">days</string>
    <string name="coupon_validity_month">months</string>
    <string name="coupon_validity_year">years</string>
    <string name="coupon_validity_nolimit">Limitless</string>
    <string name="coupon_short_desc">Short Descrption:</string>
    <string name="coupon_description">Full Description:</string>
    <string name="coupon_free">FREE</string>
    <string name="coupon_stock_quantity">Stock Quantity:</string>
    <string name="coupon_prepaid_cash">Prepaid Cash:</string>
    <string name="coupon_prepaid_service">Prepaid Service:</string>
    <string name="coupon_one_redeemed">Redeem</string>
    <string name="coupon_cash_add">Add Cash</string>
    <string name="coupon_cash_deduct">Deduct Cash</string>
    <string name="coupon_service_add">Add Service Time</string>
    <string name="coupon_service_deduct">Deduct Service Time</string>
    <string name="coupon_buy_add">Add Purchase Time</string>
    <string name="coupon_buy_deduct">Deduct Purchase Time</string>
    <string name="card_firstname">First Name:</string>
    <string name="card_lastname">Last Name:</string>
    <string name="card_phone">Phone Number:</string>
    <string name="card_points">Current Points:</string>
    <string name="card_cash">Current Cash:</string>
    <string name="card_expired_time">Term of validity:</string>
    <string name="card_point_add">Add Points</string>
    <string name="card_point_deduct">Deduct Points</string>
    <string name="card_cash_add">Add Cash</string>
    <string name="card_cash_deduct">Deduct Cash</string>
    <string name="card_point_amount">Point Amount</string>
    <string name="card_btn_add">Add</string>
    <string name="card_btn_deduct">Deduct</string>
    <string name="text_point_amount_add">Add points amount</string>
    <string name="text_point_amount_deduct">Deduct points amount</string>
    <string name="text_cash_amount_add">Add cash amount</string>
    <string name="text_cash_amount_deduct">Deduct cash amount</string>
    <string name="text_service_time_add">Add service time</string>
    <string name="text_service_time_deduct">Deduct service time</string>
    <string name="text_buy_time_add">Add Purchase time</string>
    <string name="text_buy_time_deduct">Deduct Purchase time</string>
    <string name="text_operate_failed">Your operation is failed，error message is:</string>
    <string name="text_coupon_is_deleded">This coupon has been deleded or used.</string>
    <string name="text_coupon_redeemed_success">This coupon has been used, and redeemed successfully</string>
    <string name="text_coupon_add_points_success">You successfully added points for user</string>
    <string name="text_coupon_deduct_points_success">You successfully deducted points for user</string>
    <string name="text_coupon_add_cash_success">You successfully added cash amount for this coupon</string>
    <string name="text_coupon_deduct_cash_success">You successfully deducted cash amount for this coupon</string>
    <string name="text_coupon_add_service_success">You successfully added service time for this coupon</string>
    <string name="text_coupon_deduct_service_success">You successfully deducted service time for this coupon</string>
    <string name="text_coupon_add_buy_success">You successfully added purchase time for this coupon</string>
    <string name="text_coupon_deduct_buy_success">You successfully deducted purchase time for this coupon</string>
    <string name="notification_coupon_received">Received a coupon</string>
    <string name="notification_coupon_received_text">Your friend sent a coupon to you</string>
    <string name="notification_coupon_sent">Sent out a coupon</string>
    <string name="notification_coupon_sent_text">Gave a coupon to your friend</string>
    <string name="notification_user_coupon_received">Received a coupon</string>
    <string name="notification_user_coupon_received_text">You have received a coupon from the merchant</string>
    <string name="notification_user_card_received">Received a membership card</string>
    <string name="notification_user_card_received_text">You have received a membership card from merchant</string>
    <string name="notification_user_point_add">Your points have been increased</string>
    <string name="notification_user_point_add_text">%s membership points are added to your account by merchant</string>
    <string name="notification_user_point_redeemed">Your points have been deducted</string>
    <string name="notification_user_point_redeemed_text">%s membership points are deducted from your account by merchant</string>
    <string name="notification_user_service_add">Service time have been increased</string>
    <string name="notification_user_service_add_text">%s time of service are added to your coupon by merchant</string>
    <string name="notification_user_service_redeemed">Service time have been deducted</string>
    <string name="notification_user_service_redeemed_text">%s time of service are deducted from your coupon by merchant</string>
    <string name="notification_user_coupon_used">Coupon has been used</string>
    <string name="notification_user_coupon_used_text">You one-time coupon has been used</string>
    <string name="notification_user_buy_redeemed">Coupon purchase time have been deducted</string>
    <string name="notification_user_buy_redeemed_text">%s time of purchase are deducted from your coupon by merchant</string>
    <string name="notification_user_buy_added">Coupon purchase time have been increased</string>
    <string name="notification_user_buy_added_text">%s time of purchase are added to your coupon by merchant</string>
    <string name="notification_user_cash_add">Coupon amount have been increased</string>
    <string name="notification_user_cash_add_text">%s prepaid cash are added to your coupon by merchant</string>
    <string name="notification_user_cash_redeemed">Coupon amount have been deducted</string>
    <string name="notification_user_cash_redeemed_text">%s prepaid cash are deducted from your coupon by merchant</string>
    <string name="notification_merchant_coupon_sent">Sent out a coupon successfully</string>
    <string name="notification_merchant_coupon_sent_text">Gave a coupon to user</string>
    <string name="notification_merchant_card_sent">Sent out a card successfully</string>
    <string name="notification_merchant_card_sent_text">Gave a card to user</string>
    <string name="notification_merchant_coupon_redeemed">Redeemed a coupon successfully</string>
    <string name="notification_merchant_coupon_redeemed_text">Redeemed a coupon from user</string>
    <string name="notification_merchant_point_redeemed">Deducted points successfully</string>
    <string name="notification_merchant_point_redeemed_text">Deducted %s points from user successfully</string>
    <string name="notification_merchant_point_added">Added points successfully</string>
</resources>