<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:src="@mipmap/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/shape_login_input"
            android:divider="@drawable/shape_divider"
            android:orientation="vertical"
            android:showDividers="middle">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/tv_height"
                android:background="#ffffff"
                android:drawableLeft="@mipmap/login_icon_account"
                android:drawablePadding="25dp"
                android:hint="@string/login_username_hint"
                android:inputType="text"
                android:paddingLeft="15dp"
                android:textColor="#000000"
                android:textColorHint="#ffdddddd" />

            <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0.5dp"-->
            <!--android:background="#969696" />-->

            <EditText
                android:id="@+id/et_password"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/tv_height"
                android:background="#ffffff"
                android:drawableLeft="@mipmap/login_icon_password"
                android:drawablePadding="25dp"
                android:fontFamily="sans-serif"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:textColor="#000000"
                android:textColorHint="#ffdddddd" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/cb_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="25dp"
            android:checked="true"
            android:text="@string/login_remember"
            android:textColor="#000000" />
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@drawable/btn_login_selector"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>