<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--头部菜单-->
    <include layout="@layout/include_menu_navi"
        android:id="@+id/layout_menu_navi"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ededed">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ededed"
            android:orientation="vertical"
            android:paddingBottom="15dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="10dp"
                tools:text="Free Coupon Title"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coupon_short_desc"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tv_shortdesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:textColor="#424242"
                android:textSize="12sp" />

            <LinearLayout
                android:id="@+id/ll_benefit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/coupon_benefit"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/tv_benefit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#454545" />

                <TextView
                    android:id="@+id/tv_benefit_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="5dp"
                    android:textColor="#454545" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/coupon_publish_price"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textColor="#454545" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/coupon_validity"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/tv_validity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textColor="#454545" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/coupon_publish_date"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/tv_expired"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textColor="#454545" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:paddingBottom="5dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/coupon_stock_quantity"
                    android:textColor="#000000" />

                <TextView
                    android:id="@+id/tv_stock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textColor="#454545" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/coupon_description"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                tools:text="  Test asdf"
                android:textColor="#454545"
                android:textSize="12sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>